--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "cosmjs-types": "^0.5.2",
+    "date-fns": "^2.29.3",
+    "events": "^3.3.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-dotenv": "^3.4.2",
@@ -29,6 +31,7 @@
     "react-native-screens": "^3.18.2",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.6.0",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "realm": "^11.3.0"
   },
@@ -38,6 +41,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/events": "^3.0.0",
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
